# Voice-Chat-Alert

./: .env.example  .gitignore  .replit  Dockerfile  README.md  discloud.config  generate_invite.py  keep_alive.py  keep_awake.py  main.py  pyproject.toml  replit.md  requirements.txt  uptime_monitor.py
attached_assets/: bot_1754933700701.py
templates/: index.html
